# detect-kit

./: Makefile  README.md  pyproject.toml  sample.config.yaml
.github/workflows/: lint-and-test.yml
detect_kit/: certificate.py  config.py  models.py
tests/: conftest.py  test_certificate.py  test_certificates.py  test_detect_kit.py  test_domain.py  test_domains.py  tests.config.yaml  types.py
tests/integration/: test_badssl_certificates.py
tests/lib/: test_certificate.py  test_detect_kit.py  test_domain.py  test_new_certificate.py
