[tool.poetry]
name = "detect-kit"
version = "0.1.0"
description = ""
authors = ["Edward Iskandarov <edward@craftly.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
python-whois = "^0.7.3"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
