[tool.poetry]
name = "detect-kit"
version = "0.1.0"
description = ""
authors = ["Edward Iskandarov <edward@craftly.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
python-whois = "^0.7.3"
pydantic = "^1.7.3"
tenacity = "^6.2.0"
PyYAML = "^5.3.1"
pyOpenSSL = "^20.0.0"
service_identity = "^18.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
flake8 = "^3.8.4"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
markers = [
    "lib: mark a test as a detect_kit library.",
    "detection: mark a test as an issue detection.",
]
